# srt-fuzzy-sync

./: .gitignore  README.md  main.py  pyproject.toml
srt_fuzzy_sync/: __main__.py  syncer.py
