[tool.poetry]
name = "srt-fuzzy-sync"
version = "1.0.0"
description = ""
authors = ["colin <Colin_XKL@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysrt = "^1.1.2"
rapidfuzz = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
